# cmake-init

./: .gitignore
cmake-init/: cmake_init.py
cmake-init/templates/executable/: CMakeLists.txt
cmake-init/templates/executable/experimental/: buildstlmodules.props  obj_fixer.py
cmake-init/templates/executable/source/: lib.cpp  lib.hpp  lib.ixx  main.cpp
cmake-init/templates/header/: CMakeLists.txt
cmake-init/templates/shared/: CMakeLists.txt
